--- a/style/css/app.css
+++ b/style/css/app.css
@@ -1,3 +1,19 @@
+/* Error: Undefined variable.
+ *   ,
+ * 6 |     border-bottom: 1px solid $white-500;
+ *   |                              ^^^^^^^^^^
+ *   '
+ *   style\sass\element\pdp.scss 6:30    @import
+ *   style\sass\element\_index.scss 2:5  @import
+ *   style\sass\app.scss 7:5             root stylesheet */
 
-
-/*# sourceMappingURL=app.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 6 \2502      border-bottom: 1px solid $white-500;\d\a   \2502                               ^^^^^^^^^^\a   \2575 \a   style\\sass\\element\\pdp.scss 6:30    @import\a   style\\sass\\element\\_index.scss 2:5  @import\a   style\\sass\\app.scss 7:5             root stylesheet";
+}
